[package]
name = "mmtk-julia"
version = "0.1.0"
authors = ["Eduardo Souza <ledusou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Metadata for the Julia repository
[package.metadata.julia]
# Our CI matches the following line and extract mmtk/julia. If this line is updated, please check ci yaml files and make sure it works.
julia_repo = "https://github.com/mmtk/julia.git"
julia_version = "5c406d9bb20d76e2298a6101f171cfac491f651c"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "*"
built = "*"

[profile.release]
lto = true

[dependencies]
libc = "0.2"
lazy_static = "1.1"
# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI
mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev="ef2bd6d043d8675badaa415db89be7b52439725f" }
# Uncomment the following to build locally
# mmtk = { path = "../repos/mmtk-core" }
log = {version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
enum-map = ">=2.1"
atomic = "0.4.6"
chrono = "*"
thread-id = "*"

# ykstackmaps = { git = "https://github.com/udesou/ykstackmaps.git", branch = "udesou-master", version = "*" }

[features]
default = ["mmtk/vm_space", "julia_copy_stack"]

# Plans
nogc = []
immix = ["non_moving_immix"]
stickyimmix = ["non_moving_immix"]
marksweep = []

# TODO remove this when we properly support moving
non_moving_immix = ["mmtk/immix_non_moving", "mmtk/immix_smaller_block"]
julia_copy_stack = []
