[package]
name = "julia-bench"
publish = false
version = "0.1.0"

[dependencies]
itertools = "0.7.1"
mersenne_twister = "1.1.0"
num = "0.1.37"
rand = "0.3.15"

[dependencies.blas]
features = ["openblas"]
version = "0.18.1"
optional = true

[dependencies.blas-sys]
version = "0.6.9"
features = ["openblas"]

[dependencies.ndarray]
features = ["blas"]
version = "0.10.12"

[features]
default = []
direct_blas = ["blas"]
